Fix display issues on safari

--- a/Virtual Piano/styles.css
+++ b/Virtual Piano/styles.css
@@ -1,10 +1,16 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap');* {
+
+html{
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+  }
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-
+  
 }
 
 body {
@@ -37,6 +43,7 @@ body {
 }
 
 .utilities  span {
+  font-family: 'Open Sans', sans-serif;
   font-weight: 500;
   margin-right: 15px;
   font-size: 1.19rem;
@@ -186,7 +193,7 @@ body {
   bottom: 35px;
   width: 100%;
   color: #A2A2A2;
-  font-size: 0.75rem;
+  font-size: 0.68rem;
   text-align: center;
 }
 
@@ -202,6 +209,9 @@ body {
   #longPiano .piano-keys .key span {
     font-size: 0.65rem;
   }
+  #shortPiano .piano-keys .key span {
+    font-size: 1rem;
+  }
 }
 
 @media (min-width: 1401px) and (max-width: 1515px) {
@@ -213,6 +223,9 @@ body {
   }
   #longPiano .piano-keys .key span {
     font-size: 0.55rem;
+  }
+  #shortPiano .piano-keys .key span {
+    font-size: 1rem;
   }
 }
 
@@ -228,6 +241,9 @@ body {
   }
   #longPiano .piano-keys .key span {
     font-size: 0.55rem;
+  }
+  #shortPiano .piano-keys .key span {
+    font-size: 0.91em;
   }
 }
 
